# WEBVittorioRomeo2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utils.cpp  Utils.h  WEBVittorioRomeo2.mk  WEBVittorioRomeo2.project  WEBVittorioRomeo2.txt  main.cpp
Release/Json/: mainMenu.json
Release/Json/Pages/Articles/2DProcedural/: page.json
Release/Json/Pages/Index/: page.json
Release/Json/Pages/Index/Asides/: 0_aboutme.json  1_aboutwebsite.json
Release/Json/Pages/Index/Entries/: 1_blogwip.json
Release/Json/Pages/Portfolio/Entries/: 0_header.json  1_basicskills.json  3_programming.json
Release/Json/Pages/Projects/: page.json
Release/Json/Pages/Projects/Entries/: 0_header.json  1_openhexagon.json  2_openhexagonmenu.json
Release/Result/: index.html  portfolio.html  projects.html
Release/Result/Articles/: 2DproceduralGeneration.html
Release/Result/Resources/css/: main.css  main.scss
Release/Result/Resources/js/: main.js
Release/Templates/: page.tpl
_RELEASE/Json/: mainMenu.json
_RELEASE/Json/Pages/Index/Asides/: 0_aboutme.json  1_aboutwebsite.json  2_donate.json
_RELEASE/Json/Pages/Index/Entries/: 0_header.json  1_blog.json  1_blogwip.json
_RELEASE/Json/Pages/Portfolio/: page.json
_RELEASE/Json/Pages/Portfolio/Entries/: 0_header.json  1_basicskills.json  2_computers.json  3_programming.json  4_digitalart.json  5_presentations.json
_RELEASE/Json/Pages/Projects/Asides/: 0_github.json  0_oldblog.json
_RELEASE/Json/Pages/Projects/Entries/: 1_openhexagon.json  2_delverschoice.json
_RELEASE/Json/Pages/Stuff/: page.json
_RELEASE/Json/Pages/Stuff/Entries/: 0_header.json  1_mdWrapper.json
_RELEASE/Json/Pages/Tutorials/: page.json
_RELEASE/Json/Pages/Tutorials/Entries/: -1_DiveIntoCpp11_1  0_header.json  1_0_DiveIntoCpp11_1.json  1_2DProcedural.json  2_crackProblem.json  3_2dGrid.json  (+1 more)
_RELEASE/Json/Pages/Unime/: page.json
_RELEASE/Result/: index.html  portfolio.html  projects.html  stuff.html  tutorials.html  unime.html
_RELEASE/Result/Resources/css/: main.css  main.scss
_RELEASE/Result/Resources/js/: highlight.pack.js
_RELEASE/Result/Tutorials/: 2DproceduralGeneration.html
_RELEASE/Result/VoxIuvenis/: 1.html
_RELEASE/Templates/: page.tpl
_RELEASE/Templates/Asides/: text.tpl
_RELEASE/Templates/Base/: main.tpl
cmake/modules/: FindCTemplate.cmake
src/: main.cpp
(+15 files in other folders)
